Introduce Serilog - Datadog Sink

--- a/Messaging.Api/Messaging.Api.csproj
+++ b/Messaging.Api/Messaging.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="3.7.100.44" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+	<PackageReference Include="Serilog.Sinks.Datadog.Logs" Version="0.5.0" />
   </ItemGroup>
 
 </Project>
