--- a/Messaging.Api/appsettings.json
+++ b/Messaging.Api/appsettings.json
@@ -1,13 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "AllowedHosts": "*",
   "AWS": {
-    "SQSQueueUrl": "queue_link"
+    "SQSQueueUrl": "queueLink"
+  },
+  "Datadog": {
+    "ApiKey": "apiKey"
   }
 }
